--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Create GitHub release
       uses: softprops/action-gh-release@v2
       with:
-        files: ${{github.workspace}}/${{ github.event.repository.name }}.zip
+        files: ${{github.workspace}}/${{ secrets.SLUG }}.zip
